--- a/Learning CSS/stylingTwo.css
+++ b/Learning CSS/stylingTwo.css
@@ -59,9 +59,9 @@ use classes for similar styling choices on page
     border: dotted blue 2px;
 }
 
-ul{
+ul {
     /* list-style-type: square;
-    list-style-type: "< ";
-    list-style-type: none; */
+    list-style-type: "< ";*/
+    list-style-type: none; 
     /* list-style-position: inside; marker is now inside */
 }
