--- a/ArtistPortfolioProject/app.css
+++ b/ArtistPortfolioProject/app.css
@@ -1,3 +1,96 @@
 body{
     font-family: Cormorant, serif;
 }
+
+.navbar {
+    margin: 32px 0 0 32px;
+
+}
+
+.navbar h1 {
+    display: inline-block;
+    font-weight: 300;
+    margin: 0 32px 0 0;
+    
+}
+
+.links {
+    display: inline-block;
+}
+
+.links ul{
+    padding: 0;
+}
+
+.links li {
+    display: inline-block;
+}
+
+.links a {
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+    margin: 0 8px; 
+}
+
+a.active {
+    border-bottom: 1px solid black;
+}
+
+.gallery{
+    margin: 30px 30px;
+    padding:0;
+}
+
+.imgbox{
+    display: inline-block;
+    width: 49.75%;
+    box-sizing: border-box;
+    padding: 10px;
+    margin-bottom: 16px;
+}
+
+.imgbox img{
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    /* crops image as it gets smaller */
+}
+
+.imgbox img:hover {
+    opacity: 0.85;
+}
+
+.imgbox h2 {
+    margin: 8px 0 0 0;
+    font-weight: 400;
+}
+
+.about{
+    width: 40%;
+    min-width: 600px;
+    margin: 100px 0 100px 200px;
+}
+
+.about h3{
+    font-size: 40px;
+    font-weight: 300;
+}
+
+#statement {
+    width: fit-content;
+    box-sizing: border-box;
+    border-bottom: 1px solid black;
+    margin-top: 0;
+}
+
+.contact{
+    margin: 100px 0 100px 200px;
+    font-weight: 300;
+    font-size: 20px;
+}
+
+.contact h4 {
+    margin: 0;
+}
+
