--- a/Projects/HazelCVProject/app.css
+++ b/Projects/HazelCVProject/app.css
@@ -6,7 +6,8 @@ body{
 
 .hero{
     background-color: #f08e80;
-    height: 90vh;
+    min-height: 90vh;
+    display: inline-block;
     color: white;
     width: 100vw;
 }
@@ -42,22 +43,110 @@ body{
     opacity: 0.8;
 }
 
-.heroContent{
+.content{
     padding: 0 15%;
 }
 
-.heroContent .tagline{
+.content .tagline{
     font-size: 3.5rem;
     color: white;
     letter-spacing: 2px;
 }
 
 .twoCols{
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
 
 .twoCols .half{
-    width: 49.5%;
+    width: 50%;
     box-sizing: border-box;
     float: left;
+}
+
+.twoCols .skills{
+    width: 50%;
+    float: left;
+    box-sizing: border-box;
+    padding: 0;
+    list-style: none;
+}
+
+.twoCols .skills li{
+    width: 50%;
+    float: left;
+    margin: 8px 0;
+}
+
+.blog{
+    background-color: white;
+    display: inline-block;
+    color: black;
+    width: 100vw;
+    padding: 64px 0;
+}
+
+.blog .content .title{
+    font-size: 1.3rem;
+    padding: 0;
+    margin: 8px 0;
+    font-weight: bold;
+}
+
+.blog .content .description{
+    font-size: 1rem;
+    padding: 8px 0 0 0;
+    margin: 0;
+}
+
+.content .date{
+    font-size: 0.9rem;
+    color: gray;
+    padding: 8px 0;
+    margin: 0 0 32px 0;
+}
+
+.blog #first{
+    margin-top: 20.8px;
+    padding: 0;
+}
+
+.events{
+    background-color: #fdf0e6;
+    display: inline-block;
+    color: black;
+    width: 100vw;
+    padding: 64px 0;
+}
+
+.events .eventTitle{
+    font-size: 1.2rem;
+    margin-bottom: 16px;
+}
+
+.events .city{
+    font-size: 1rem;
+    margin: 0;
+    font-weight: bold;
+}
+
+.events #first{
+    margin-top: 20.8px;
+    padding: 0;
+}
+
+footer{
+    color: white;
+    background-color: black;
+    width: 100vw;
+    padding: 32px;
+}
+
+.footerContent{
+    text-align: center;
+}
+
+footer img{
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 0 4px;
 }
