--- a/Learning CSS/Transition/app.css
+++ b/Learning CSS/Transition/app.css
@@ -1,17 +1,29 @@
 .btn{
     text-decoration: none;
+    color: orangered;
     border: 2px solid black;
     padding: 10px 20px;
     display: inline-block;
     margin-top: 30px;
     /* transition: background-color 1s; will transition whenever background-colour changes 
     */
+    transition: transform 3s cubic-bezier(0.2, -2, 0.8, 2);
 }
 
 /* harsh w/o transition*/
 .btn:hover{
 
-    transition: background-color 1s;
-    /* only when hovering */
+   /* transition: color 1.5s,background-color 1s;
+     only when hovering, can also do all with changes but everything will take that amount of time 
     background-color: orangered;
+    color: white;*/
+    transform: translateX(100px);
 }
+
+/* 
+transitoin: <property><duration><timing-function><delay>
+There's also timimng functions, look at mdn for ease  and cubic-bezier functions: transition timing functions
+
+
+some properties should be animated for performance
+ */
